--- a/Clients/style.css
+++ b/Clients/style.css
@@ -463,6 +463,7 @@ footer{
     list-style: none;
     display: inline-block;
     margin: 5px;
+    color: #40492e;
     
    
 
@@ -686,9 +687,10 @@ textarea::-webkit-scrollbar-thumb{
 }
 .prod1-img{
     
-    margin-left: 150px;
+    margin-left: 160px;
     margin-top: 30px;
     display: flex;
+
     
 }
 
@@ -697,6 +699,7 @@ textarea::-webkit-scrollbar-thumb{
     width: 350px;
     height: 430px;
     border-radius: 10px;
+    
 
 }
 .prod1-img h1{
