--- a/Clients/style.css
+++ b/Clients/style.css
@@ -769,10 +769,19 @@ textarea::-webkit-scrollbar-thumb{
     color: #40492e;
     margin-left: 40px;
     margin-top: 40px;
-  }
-  .panier{
     border-bottom: #40492e solid 3px;
     width: 100%;
     margin-left: 40px;
     margin-top: 20px;
   }
+ .panier table {
+    color: #40492e;
+    margin-left: 40px;
+    margin-top: 40px;
+   font-size: 30px;
+   
+   
+    
+ }
+
+ 
