--- a/Clients/style.css
+++ b/Clients/style.css
@@ -446,7 +446,9 @@ h1 #reg{
 .log{
     padding: 20px 0 20px 0;
 }
-
+.footer-div{
+    width: 100%;
+}
 footer{
     background:#9DAD7F;
     text-align: center;
@@ -457,12 +459,15 @@ footer{
 }
 .footer-img{
     padding-top: 20px;
+    
+    
+   
 }
 
 .footer-icons li{
     list-style: none;
     display: inline-block;
-    margin: 5px;
+    margin:5px ;
     color: #40492e;
     
    
@@ -472,10 +477,12 @@ footer{
     padding: 10px;
     font-size: 30px;
     
+    
 }
 .footer-menu li{
     display: inline-block;
     margin: 15px;
+    
     
 }
 .footer-menu a{
@@ -761,6 +768,7 @@ textarea::-webkit-scrollbar-thumb{
     cursor: pointer;
      margin-left: 25px;
     margin-top: 20px;
+    
   }
   .product1{
     margin-left: 10%;
@@ -770,15 +778,15 @@ textarea::-webkit-scrollbar-thumb{
     margin-left: 40px;
     margin-top: 40px;
     border-bottom: #40492e solid 3px;
-    width: 100%;
-    margin-left: 40px;
-    margin-top: 20px;
+    width: 90%;
+    padding-bottom: 30px;
   }
- .panier table {
+ .table {
     color: #40492e;
-    margin-left: 40px;
+    margin-left: 70px;
     margin-top: 40px;
-   font-size: 30px;
+   font-size: 20px;
+   align-content: center;
    
    
     
@@ -787,4 +795,14 @@ textarea::-webkit-scrollbar-thumb{
    background-color: #3b4b1d;
    border: #3b4b1d;
  }
- 
+ .total{
+    float: right;
+    margin-top: 40px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+ }
+
+ .verification{
+    margin-top: 40px;
+    margin-left: 50px;
+ }
